# imap-migration-tools

./: .coverage  .gitignore  LICENSE  Makefile  README.md  backup_imap_emails.py  compare_imap_folders.py  count_imap_emails.py  imap_common.py  migrate_imap_emails.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
src/: backup_imap_emails.py  compare_imap_folders.py  count_imap_emails.py  imap_backup.py  imap_common.py  imap_compare.py  imap_count.py  imap_migrate.py  imap_oauth2.py  imap_restore.py  imap_retry.py  imap_session.py  migrate_imap_emails.py  migration_cache  oauth2_google.py  oauth2_microsoft.py  provider_exchange.py  provider_gmail.py  restore_cache.py  restore_imap_emails.py
src/auth/: imap_oauth2.py  oauth2_google.py
src/core/: imap_session.py
src/providers/: provider_gmail.py
src/utils/: imap_common.py  imap_compress.py
test/: conftest.py  test_backup_imap_emails.py  test_compare_imap_folders.py  test_count_imap_emails.py  test_imap_backup.py  test_imap_common.py  test_imap_compare.py  test_imap_compress.py  test_imap_count.py  test_imap_migrate.py  test_imap_oauth2.py  test_imap_restore.py  test_imap_retry.py  test_imap_session.py  test_migrate_imap_emails.py  test_migrate_resume.py  test_migrate_with_cache.py  test_oauth2_google.py  test_oauth2_microsoft.py  test_provider_exchange.py  test_provider_gmail.py  test_restore_imap_emails.py
test/auth/: test_imap_oauth2.py  test_oauth2_google.py  test_oauth2_microsoft.py
test/core/: test_imap_session.py
test/providers/: test_provider_exchange.py  test_provider_gmail.py
test/utils/: test_imap_common.py  test_imap_compress.py
tools/: mock_imap_server.py  mock_oauth_server.py
